feat: swagger auth support, add additional endpoints for roles, add flyway migration for users